--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="U-XA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="icon" href="./favicon.ico">
-    </head>
-    <body>
 
-        <script src="./script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="U-XA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico">
+</head>
+
+<body>
+    <!-- Navigation menu -->
+    <nav>
+        <div class="logo">Logo</div>
+        <div>
+            <ul class="nav">
+                <li>House</li>
+                <li>Apartment</li>
+                <li>Room</li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <!-- Hero Section -->
+    <div class="heroSec">
+        <div class="overlay"></div>
+        <!-- <img src="./favicon.ico" alt="Hero section"> -->
+    </div>
+    <script src="./script.js"></script>
+</body>
+
 </html>
