--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- Hero Section -->
     <div class="heroSec">
         <div class="overlay"></div>
-        <!-- <img src="./favicon.ico" alt="Hero section"> -->
+        <div class="slides"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=35&pause=1000&color=2ECDA9&random=false&width=435&lines=Afordable+rooms;Comfortable+apartments;Renowed+houses" alt="Typing SVG" /></div>
+        <img class="img" src="./favicon.ico" alt="Hero section">
     </div>
     <script src="./script.js"></script>
 </body>
